# armpi_fpv

./: .gitattributes  .gitignore  ARDUCAM_CSI_TESTING_CHECKLIST.md  DEVELOPMENT_SETUP.md  arducam_csi_test.py
docs/: ARDUCAM_CSI_TESTING_CHECKLIST.md  COMPREHENSIVE_TESTING_GUIDE.md  IMPORT_MIGRATION_NOTES.md  PROJECT_STRUCTURE.md  README.md  ROS1_TO_ROS2_MIGRATION_ANALYSIS.md  ROS2_TESTING_GUIDE.md
install/: local_setup.sh  setup.sh
install/armpi_fpv_common/share/armpi_fpv_common/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/armpi_fpv_kinematics/lib/armpi_fpv_kinematics/: search_kinematics_solutions_node.py
install/armpi_fpv_kinematics/share/armpi_fpv_kinematics/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/armpi_fpv_kinematics/share/armpi_fpv_kinematics/launch/: kinematics_node.launch
install/armpi_fpv_kinematics/share/armpi_fpv_kinematics/msg/: JointRange.json  JointsRange.json  Link.json
install/armpi_fpv_kinematics/share/armpi_fpv_kinematics/srv/: GetJointRange.idl  GetJointRange.json  GetLink.json  SetJointRange.srv  SetLink.json  SetLink.srv  SetRobotPose.idl  SetRobotPose.json
install/hiwonder_servo_controllers/share/hiwonder_servo_controllers/: package.bash  package.zsh
install/hiwonder_servo_driver/share/hiwonder_servo_driver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hiwonder_servo_msgs/share/hiwonder_servo_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hiwonder_servo_msgs/share/hiwonder_servo_msgs/action/: ActionGroupRunner.idl  ActionGroupRunner.json
install/hiwonder_servo_msgs/share/hiwonder_servo_msgs/msg/: CommandDurationList.json  (+5 more)
log/: latest_build
src/armpi_fpv_bringup/: CMakeLists.txt  package.xml
src/armpi_fpv_bringup/launch/: arducam_csi.launch.py  arducam_csi_hdmi.launch.py  bringup.launch  bringup.launch.py  camera_calib.launch  camera_calib.launch.py  usb_cam.launch  usb_cam.launch.py
src/armpi_fpv_bringup/scripts/: source_env.bash
src/armpi_fpv_common/: CMakeLists.txt  package.xml  setup.py
src/armpi_fpv_common/armpi_fpv_common/: __init__.py  action_group_controller.py  common.py  tts.py
src/armpi_fpv_common/resource/: armpi_fpv_common
src/armpi_fpv_common/src/armpi_fpv_common/: action_group_controller.py  asr.py  common.py
src/armpi_fpv_description/: CMakeLists.txt  package.xml  urdf.rviz
src/armpi_fpv_description/launch/: display.launch.py  gazebo.launch.py
src/armpi_fpv_description/urdf/: armpi_fpv.urdf
src/armpi_fpv_descrption/: CMakeLists.txt  package.xml
src/armpi_fpv_descrption/launch/: display.launch  gazebo.launch
src/armpi_fpv_kinematics/: CMakeLists.txt  package.xml  setup.py
src/armpi_fpv_kinematics/armpi_fpv_kinematics/: kinematics_control.py
src/armpi_fpv_kinematics/install/: local_setup.sh  setup.sh
src/armpi_fpv_kinematics/install/armpi_fpv_kinematics/share/armpi_fpv_kinematics/: package.bash  package.zsh
src/armpi_fpv_kinematics/kinematics_pkg/: __init__.py
src/armpi_fpv_kinematics/log/: latest_build
src/armpi_fpv_kinematics/src/armpi_fpv_kinematics/: kinematics_control.py
src/armpi_fpv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/armpi_fpv_moveit_config/config/: armpi_fpv.srdf
src/armpi_fpv_moveit_config/launch/: demo.launch  planning_context.launch
src/asr_control/: CMakeLists.txt  package.xml
src/asr_control/scripts/: asr_control_sorting.py  asr_demo.py  interaction.py  tts_demo.py
src/face_detect/: CMakeLists.txt  package.xml
src/face_detect/scripts/: face.py
src/hiwonder_servo_controllers/: CMakeLists.txt  package.xml  setup.py
src/hiwonder_servo_controllers/config/: hiwonder_servo_controller.yaml
src/hiwonder_servo_controllers/install/: local_setup.sh  setup.sh
src/hiwonder_servo_controllers/launch/: controller_manager.launch  joint_states_publisher.launch  start.launch
src/hiwonder_servo_controllers/log/: latest_build
src/hiwonder_servo_controllers/resource/: hiwonder_servo_controllers
src/hiwonder_servo_controllers/scripts/: controller_manager.py  joint_state_publisher.py
src/hiwonder_servo_controllers/src/hiwonder_servo_controllers/: action_group_runner.py  bus_servo_control.py  controller_manager.py  joint_controller.py  joint_position_controller.py  joint_state_publisher.py  joint_trajectory_action_controller.py
src/hiwonder_servo_controllers/src/hiwonder_servo_controllers/install/: local_setup.sh  setup.sh
src/hiwonder_servo_controllers/src/hiwonder_servo_controllers/log/: latest_build
src/hiwonder_servo_driver/: CMakeLists.txt  setup.py
src/hiwonder_servo_driver/src/hiwonder_servo_driver/: hiwonder_servo_io.py  hiwonder_servo_serialproxy.py
src/hiwonder_servo_msgs/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/lab_config/: CMakeLists.txt  package.xml
src/lab_config/config/: lab_config.yaml
src/lab_config/launch/: lab_config_manager.launch.py
src/lab_config/scripts/: lab_config_manager.py
src/log/: latest_build
src/multi_control/: CMakeLists.txt  package.xml
src/multi_control/scripts/: device_scan.py  master.py
src/object_pallezting/: CMakeLists.txt  package.xml
src/object_pallezting/scripts/: pallezting.py
src/object_sorting/: CMakeLists.txt  package.xml
src/object_sorting/scripts/: sorting.py
src/object_tracking/: CMakeLists.txt  package.xml
src/object_tracking/scripts/: tracking.py
src/ros_robot_controller/: CMakeLists.txt  package.xml  setup.py
src/ros_robot_controller/launch/: ros_robot_controller_node.launch.py
src/ros_robot_controller/resource/: ros_robot_controller
src/ros_robot_controller/scripts/: ros_robot_controller_node.py
src/ros_robot_controller/src/ros_robot_controller/: __init__.py  ros_robot_controller_sdk.py
src/warehouse/: CMakeLists.txt  package.xml
src/warehouse/scripts/: exchange.py  in.py  out.py
test/: README.md  arducam_csi_test.py  hdmi_camera_test.py  hdmi_camera_test.sh  quick_hdmi_test.py  ros2_camera_publisher.py  ros2_migration_template.py  simple_camera_publisher.py
(+174 files in other folders)
