<?xml version="1.0"?>
<package format="3">
  <name>armpi_fpv_bringup</name>
  <version>0.0.0</version>
  <description>The armpi_fpv_bringup package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_robot_controller</exec_depend>
  <exec_depend>hiwonder_servo_controllers</exec_depend>
  <exec_depend>armpi_fpv_kinematics</exec_depend>
  <exec_depend>lab_config</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>object_sorting</exec_depend>
  <exec_depend>object_tracking</exec_depend>
  <exec_depend>object_pallezting</exec_depend>
  <exec_depend>face_detect</exec_depend>
  <exec_depend>warehouse</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>camera_calibration</exec_depend>
  <export>
  </export>
</package>
