<?xml version="1.0"?>
<package format="3">
  <name>armpi_fpv_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for armpi_fpv robot</description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <architecture_independent/>
  </export>
</package>
