<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiwonder_servo_controllers</name>
  <version>0.0.1</version>
  <description>The hiwonder_servo_controllers package</description>
  <maintainer email="lucas@todo.todo">lucas</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <build_depend>rclpy</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>hiwonder_servo_msgs</build_depend>
  <build_depend>hiwonder_servo_driver</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>rclpy_action</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>hiwonder_servo_driver</exec_depend>
  <exec_depend>hiwonder_servo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rclpy_action</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
